syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message SumRequest {
    repeated int32 numbers = 1;
}

message SumResponse {
    int32 result = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double result = 1;
}

message MaxRequest {
    int32 number = 1;
}

message MaxResponse {
    int32 max = 1;
}

message SquareRootRequest {
    double number = 1;
}

message SquareRootResponse {
    double square_root = 1;
}

service CalculatorService {
    rpc Add(SumRequest) returns (SumResponse);
    rpc Average(stream AverageRequest) returns (AverageResponse);
    rpc Max(stream MaxRequest) returns (stream MaxResponse);
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse);
}